[gd_scene load_steps=2 format=2]

[ext_resource path="res://Test/TestExperience.gd" type="Script" id=1]

[node name="test" type="Control"]
script = ExtResource( 1 )

[node name="levelUp" type="Button" parent="."]
margin_left = 79.0
margin_top = 72.0
margin_right = 95.0
margin_bottom = 106.0
text = "LevelUp"

[node name="xpUp" type="Button" parent="."]
margin_left = 239.0
margin_top = 72.0
margin_right = 255.0
margin_bottom = 106.0
text = "xpUp"

[node name="levelLabel" type="Label" parent="."]
margin_left = 106.0
margin_top = 130.0
margin_right = 146.0
margin_bottom = 150.0

[node name="nextLevelLabel" type="Label" parent="."]
margin_left = 191.0
margin_top = 205.0
margin_right = 231.0
margin_bottom = 225.0
